--- a/index.html
+++ b/index.html
@@ -122,36 +122,39 @@
               <div class="accordion-item">
                 <h2 class="accordion-header ps-auto" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Accordion Item #1
+                    Comment #1
                   </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
                   <div class="accordion-body">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ad, suscipit, aliquam quam cum iusto nam nisi quasi illo fugiat rerum sit iste, voluptates et excepturi nihil quod animi natus?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur nobis quasi dolorem corrupti? Quidem sed rerum id. Repudiandae officiis et qui necessitatibus saepe, rerum minima, praesentium suscipit voluptate consequuntur odit.
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Accordion Item #2
+                    Comment #2
                   </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
                   <div class="accordion-body">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, nemo beatae consectetur, architecto vel quibusdam deleniti aut reprehenderit, eligendi quia perspiciatis qui voluptatem quis reiciendis libero cum possimus ducimus soluta.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium repellat nisi veritatis animi corporis, dignissimos quis cum. Doloribus enim alias libero quidem qui quod ab, dolor possimus harum earum?
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Accordion Item #3
+                    Comment #3
                   </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
                   <div class="accordion-body">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ad sed voluptas ipsum beatae ut eaque at id dolorum repellendus, magni nostrum fugit quis optio pariatur tempora quibusdam rem corrupti!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. In, est nihil consequatur dolore ullam, perferendis fugit quos impedit eum esse quo voluptatem deserunt, quidem commodi obcaecati aut magni nam suscipit.
                   </div>
                 </div>
               </div>
@@ -173,13 +176,13 @@
         <p class="lead text-center pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eum cumque, fugit error, harum ipsam quae exercitationem officiis cupiditate aperiam reiciendis? Earum quos, eos reiciendis rerum incidunt praesentium veniam iure.</p>
         <div class="row text-dark">
           <div class="col-12 col-md-4 mb-3">
-            <div class="card text-center">
+            <div class="card text-center border border-dark border-2">
               <div class="card-body">
-                <p class="mt-5 fw-semibold">Basic</p>
+                <p class="mt-3">Basic</p>
                 <h2 class="display-3">$100</h2>
-                <p class="font-monospace mt-3">Lorem ipsum dolor sit amet.</p>
+                <p class="font-monospace mt-3 mb-1">Lorem ipsum dolor sit amet.</p>
               </div>
-              <ul class="list-unstyled my-4 text-start ps-2">
+              <ul class="list-unstyled mb-3 text-start ps-2">
                 <li> Lorem, ipsum dolor.</li>
                 <li> Lorem ipsum dolor sit amet.</li>
                 <li> Lorem ipsum dolor facere.</li>
@@ -190,23 +193,23 @@
                 <li class="text-decoration-line-through text-danger"> Lorem ipsum dolor sit amet reprehenderit.</li>
                 <li class="text-decoration-line-through text-danger"> Lorem, ipsum quo.</li>
               </ul>
-              <div class="card-body">
+              <div class="card-body mb-3">
                 <button
                 type="button" 
-                class="btn btn-outline-dark" 
+                class="btn btn-outline-primary" 
                 data-bs-toggle="modal" 
                 data-bs-target="#ModalLabelBasic">Suscribe</button>
               </div>
             </div>
           </div>
           <div class="col-12 col-md-4 mb-3">
-            <div class="card text-center">
+            <div class="card text-center text-white bg-dark border border-white border-2">
               <div class="card-body">
-                <p class="mt-5 fw-semibold">Pro</p>
+                <p class="mt-3">Pro</p>
                 <h2 class="display-3">$200</h2>
-                <p class="font-monospace mt-3">Lorem ipsum dolor sit amet.</p>
+                <p class="font-monospace mt-3 mb-1">Lorem ipsum dolor sit amet.</p>
               </div>
-              <ul class="list-unstyled my-4 text-start ps-2">
+              <ul class="list-unstyled mb-3 text-start ps-2">
                 <li> Lorem, ipsum dolor.</li>
                 <li> Lorem ipsum dolor sit amet.</li>
                 <li> Lorem ipsum dolor facere.</li>
@@ -217,23 +220,23 @@
                 <li class="text-decoration-line-through text-danger"> Lorem ipsum dolor sit amet reprehenderit.</li>
                 <li class="text-decoration-line-through text-danger"> Lorem, ipsum quo.</li>
               </ul>
-              <div class="card-body">
+              <div class="card-body mb-3">
                 <button
                 type="button" 
-                class="btn btn-outline-dark" 
+                class="btn btn-outline-light" 
                 data-bs-toggle="modal" 
                 data-bs-target="#ModalLabelPro">Suscribe</button>
               </div>
             </div>
           </div>
           <div class="col-12 col-md-4 mb-3">
-            <div class="card text-center">
+            <div class="card text-center bg-warning border fw-bold border-dark border-2">
               <div class="card-body">
-                <p class="mt-5 fw-semibold">Executive</p>
-                <h2 class="display-3">$500</h2>
-                <p class="font-monospace mt-3">Lorem ipsum dolor sit amet.</p>
+                <p class="mt-3 text-decoration-underline">Executive</p>
+                <h2 class="display-3 fw-bold">$500</h2>
+                <p class="font-monospace mt-3 mb-1">Lorem ipsum dolor sit amet.</p>
               </div>
-              <ul class="list-unstyled my-4 text-start ps-2">
+              <ul class="list-unstyled mb-3 text-start ps-2">
                 <li> Lorem, ipsum dolor.</li>
                 <li> Lorem ipsum dolor sit amet.</li>
                 <li> Lorem ipsum dolor facere.</li>
@@ -244,12 +247,12 @@
                 <li> Lorem ipsum dolor sit amet reprehenderit.</li>
                 <li> Lorem, ipsum quo.</li>
               </ul>
-              <div class="card-body">
+              <div class="card-body mb-3">
                 <button
                 type="button" 
                 class="btn btn-outline-dark" 
                 data-bs-toggle="modal" 
-                data-bs-target="#ModalLabelExecutive">Suscribe</button>
+                data-bs-target="#ModalLabelExecutive"><strong>Suscribe</strong></button>
               </div>
             </div>
           </div>
@@ -259,7 +262,48 @@
     <!-- Suscribe -->
     <!-- Footer -->
     <footer class="container-fluid bg-dark text-center text-light pt-3 pb-1">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nostrum beatae asperiores tempora excepturi fuga voluptates atque earum eligendi pariatur vitae expedita iusto maxime qui repellat sapiente, repellendus provident tenetur!</p>
+      <div class="row pt-2">
+        <div class="col-4">
+          <h6 class="text-decoration-underline">Social Media</h6>
+          <div class="pb-3 text-color-none">
+            <a href="#" class="link-light"><i class="bi bi-instagram h3 p-1"></i></a>
+            <a href="#" class="link-light"><i class="bi bi-twitter h3 p-1"></i></a>
+            <a href="#" class="link-light"><i class="bi bi-whatsapp h3 p-1"></i></a>
+            <a href="#" class="link-light"><i class="bi bi-facebook h3 p-1"></i></a>
+          </div>
+        </div>
+        <div class="col-4">
+          <h6 class="text-decoration-underline">About us</h6>
+          <a href="#" class="text-white text-decoration-none">
+            <h6>Who are we</h6>
+          </a>
+          <a href="#" class="text-white text-decoration-none">
+            <h6>Contact us</h6>
+          </a>
+          <a href="#" class="text-white text-decoration-none">
+            <h6>Work wiht we</h6>
+          </a>
+          <a href="#" class="text-white text-decoration-none">
+            <h6>Learn more about us</h6>
+          </a>
+        </div>
+        <div class="col-4">
+          <h6 class="text-decoration-underline">Privacity</h6>
+          <a href="#" class="text-white text-decoration-none">
+            <h6>Contracting conditions</h6>
+          </a>
+          <a href="#" class="text-white text-decoration-none">
+            <h6>Privacy contract</h6>
+          </a>
+          <a href="#" class="text-white text-decoration-none">
+            <h6>Cookies politic</h6>
+          </a>
+          <a href="#" class="text-white text-decoration-none">
+            <h6>Setting cookies</h6>
+          </a>
+        </div>
+        <p class="small mt-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Copyright © 2022</p>
+      </div>
     </footer>
     <!-- Footer -->
     <!-- Modal Newsletter -->
