--- a/index.html
+++ b/index.html
@@ -74,14 +74,12 @@
     </section>
     <!-- Slider -->
     <!-- Services -->
-    <main id="services" class="bg-dark text-white py-4">
+    <main id="services" class="bg-dark text-white py-2">
       <div class="container">
-        <div class="text-center pb-3">
-          <i class="bi bi-lightning h3"></i>
-          <i class="bi bi-lightning h3"></i>
-          <i class="bi bi-lightning h3"></i>
+        <div class="d-flex pb-2 align-items-start justify-content-center">
+          <i class="bi bi-lightning h1 me-3"></i>
+          <h2 class="display-4 mb-3">Services</h2>
         </div>
-        <h2 class="text-center display-4 mb-4">Services</h2>
         <div class="row align-items-center">
           <div class="col-12 col-lg-4">
             <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h5>
@@ -102,14 +100,12 @@
     </main>
     <!-- Services -->
     <!-- Comments -->
-    <section id="comments" class="py-4 bg-light">
+    <section id="comments" class="py-2 bg-light">
       <div class="container">
-        <div class="text-center pb-2">
-          <i class="bi bi-chat-quote h3"></i>
-          <i class="bi bi-chat-quote h3"></i>
-          <i class="bi bi-chat-quote h3"></i>
+        <div class="d-flex pb-2 align-items-start justify-content-center">
+          <i class="bi bi-chat-quote h1 me-3"></i>
+          <h2 class="display-4 mb-3">Comments</h2>
         </div>
-        <h2 class="text-center display-4 mb-4">Comments</h2>
         <p class="Lead mb-4 text-center">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam vero architecto voluptas perferendis sed explicabo! Voluptates, aspernatur, ipsam corrupti odit sit nobis omnis maiores asperiores quo facere illum, sapiente maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore aperiam, facilis debitis laborum veritatis officia earum repellat ipsa architecto consequuntur possimus neque nemo a tenetur veniam? Nobis fugit veritatis ex?</p>
         <div class="row">
@@ -167,12 +163,10 @@
     <!-- Suscribe -->
     <section id="suscribe" class="bg-secondary text-light py-3">
       <div class="container">
-        <div class="text-center h1">
-          <i class="bi bi-credit-card h3"></i>
-          <i class="bi bi-credit-card h3"></i>
-          <i class="bi bi-credit-card h3"></i>
+        <div class="d-flex pb-2 align-items-start justify-content-center">
+          <i class="bi bi-credit-card h1 me-3"></i>
+          <h2 class="display-4 mb-3">Suscribe</h2>
         </div>
-        <h2 class="text-center display-4 mb-3">Suscribe</h2>
         <p class="lead text-center pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eum cumque, fugit error, harum ipsam quae exercitationem officiis cupiditate aperiam reiciendis? Earum quos, eos reiciendis rerum incidunt praesentium veniam iure.</p>
         <div class="row text-dark">
           <div class="col-12 col-md-4 mb-3">
